# ops-qa-auditor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: checklist.yaml  checklist.yml
data/transcripts/: sample_1.txt  sample_2.txt
src/ops_qa_auditor/: __init__.py  cli.py  engine.py  reporting.py  rules.py  scoring.py  summary.py  utils.py
tests/: test_engine.py  test_rules.py  test_scoring.py
